tests/neg/utf8_bad.ovt
sensor tempé : rate(int, (10,0));
